# saketo

./: .gitignore  .gitmodules  LICENSE.md  README.md  l10n.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
docs/: building.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  routes.dart
lib/db/: objectbox-model.json  objectbox.dart  objectbox.g.dart
lib/db/main/: objectbox-model.json  objectbox.g.dart
lib/db/secure/: secure_db.dart
lib/l10n/: app_en.arb  app_tr.arb
lib/localization/: app_en.arb
lib/pages/: enter_password_page.dart  entrypoint.dart  main_wallet_page.dart  onboarding.dart
lib/pages/onboarding/: create_password_page.dart  create_pin_page.dart  entrypoint.dart  mnemonic_display_page.dart  mnemonic_input_page.dart  mode_selection_page.dart  preview_configuration_page.dart  welcome_page.dart
lib/pages/receive/: main_recive_page.dart
lib/pages/settings/: main_settings_page.dart
lib/pages/wallet_settings/: wallet_mode.dart
lib/rust_ffi/: rust_ffi.dart
lib/wallet/: wallet.dart  wallet_mode_enum.dart
lib/wallet/mnemonics/types/: mnemonic_type.dart
lib/wallet/wallet_modes/: wallet_mode_abstract.dart
lib/wallet/wallet_modes/advanced/: advanced_mode.dart
lib/wallet/wallet_modes/basic/: basic_mode.dart
lib/wallet/wallet_modes/business/: business_mode.dart
lib/wallet/wallet_modes/hardware/: hardware_mode.dart
lib/widgets/buttons/: bottom_navigation_button.dart
rust/: Cargo.toml
rust/src/: lib.rs
(+8 files in other folders)
